# saegate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: catalog.example.yaml  policy.example.yaml
docs/: architecture.d2  limitations.md
scripts/: check_no_secrets.sh  honest_marketing_gate.py
src/saegate/: __init__.py  cli.py  features.py  gate.py  mcp_server.py  policy.py  probe.py  schemas.py  telemetry.py
tests/: test_latency_p95.py  test_mcp_server.py  test_smoke.py
